refactor(cauldron): 重构 HasCauldron 相关代码
- 移除 BulgingCategory 和 TimeWarpCategory 中的重复方法
- 在 HasCauldron 类中添加 getFluidCauldron 和 getTransformCauldron 方法
- 优化 HasCauldron 类中的逻辑，提高代码可读性
- 调整 FallingBlockCollisionEventListener 中的物品掉落逻辑